tests/SyntaxError/Test16/test16.c
int main(){

int b=5;
int a = func(1, int b);
return 2*a;

}


int func(int a, int b){
return a*b;
}
